Closed Bug 135809 Opened 22 years ago Closed 22 years ago

PBE_CreateContext() and SEC_PKCS5GetIV() leak a slot reference

Categories

(NSS :: Libraries, defect, P1)

defect

Tracking

(Not tracked)

RESOLVED FIXED

People

(Reporter: wtc, Assigned: rrelyea)

References

Details

(Whiteboard: [adt2 RTM])

Attachments

(1 file)

PBE_CreateContext() and SEC_PKCS5GetIV() in pk11pbe.c call
PK11_GetInternalSlot() but do not free the slot reference.
I just wanted to add that the slot is passed to PK11_RawPBEKeyGen()
to generate a symKey, which gets its own reference to the slot
(in PK11_CreateSymKey()).  So PBE_CreateContext() and SEC_PKCS5GetIV()
need to free their reference to the slot.
Changed the QA contact to Bishakha.
QA Contact: sonja.mirtitsch → bishakhabanerjee
Attached patch Proposed patchSplinter Review
This patch is the obvious fix.	Bob, please review it.
Assigned the bug to Bob.
Assignee: wtc → relyea
Priority: -- → P1
Target Milestone: --- → 3.5
Comment on attachment 82957 [details] [diff] [review]
Proposed patch

Yup, this is the obvious patch.
Attachment #82957 - Flags: review+
Patch checked into the tip of NSS.
Status: NEW → RESOLVED
Closed: 22 years ago
Resolution: --- → FIXED
Blocks: 145836
adt1.0.1+ (on ADT's behalf) for checkin to the 1.0 branch. Pls check this in
asap. thanks! 
Whiteboard: [adt2 RTM]
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: